--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Utility library for rest modules",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "preversion": "gulp lint && npm test",
+    "test": "istanbul cover _mocha -- test/test.js -R spec"
   },
   "repository": {
     "type": "git",
@@ -17,6 +18,7 @@
   },
   "homepage": "https://github.com/sharemyscreen/http-common#readme",
   "dependencies": {
+    "change-case": "^3.0.0",
     "lodash": "^4.13.1"
   },
   "devDependencies": {
