--- a/package.json
+++ b/package.json
@@ -32,5 +32,9 @@
     "gulp-changelogmd": "^1.0.6",
     "gulp-eslint": "^2.0.0",
     "require-dir": "^0.3.0"
-  }
+  },
+  "files": [
+    "index.js",
+    "lib/"
+  ]
 }
