--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "preversion": "gulp lint && npm test",
     "version": "gulp changelog && git add CHANGELOG.md",
+    "postversion": "git push origin master --tags",
     "test": "istanbul cover _mocha -- test/test.js -R spec"
   },
   "repository": {
