--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
   },
   "homepage": "https://github.com/sharemyscreen/http-common#readme",
   "dependencies": {
+    "chalk": "^1.1.3",
     "change-case": "^3.0.0",
-    "lodash": "^4.13.1"
+    "lodash": "^4.13.1",
+    "winston": "^2.2.0"
   },
   "devDependencies": {
     "chai": "^3.5.0",
