--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "chalk": "^1.1.3",
     "change-case": "^3.0.0",
     "lodash": "^4.13.1",
+    "pug": "^2.0.0-beta6",
+    "sendgrid": "^4.7.1",
     "winston": "^2.2.0"
   },
   "devDependencies": {
